# discord-arxiv-bot

./: .cursorignore  .gitignore  README.md  bot.py  config.py  lint.sh  pyproject.toml  requirements.txt  run.sh  setup.sh
clients/: __init__.py  arxiv_client.py  discord_client.py  vllm_client.py
core/: __init__.py  queue_manager.py
models/: __init__.py  analysis.py  paper.py
services/: __init__.py  fetcher_service.py  processor_service.py
utils/: __init__.py  logger.py  stats.py
