[project]
name = "discord-arxiv-bot"
version = "1.0.0"
description = "arXiv 논문 자동 알림 Discord 봇"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "discord.py",
    "python-dotenv",
    "arxiv",
    "openai",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["clients", "core", "models", "services", "utils"]
